Completed Univatiate Analysis

--- a/V_S_S_Anirudh_Sharma.ipynb
+++ b/V_S_S_Anirudh_Sharma.ipynb
@@ -4699,7 +4699,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "7436f89f",
+   "id": "b5510e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4752,7 +4752,7 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "id": "86571791",
+   "id": "52e92387",
    "metadata": {
     "scrolled": false
    },
@@ -4872,9 +4872,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c34f1306",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Note: \n",
+    "1. The orange lines in the above plots approxmately represent the PDF of P(Failure|factor)\n",
+    "2. We must only check the distribution between the blue and red lines to draw conclusions since they represent the min and max values. \n",
+    "3. The offshots on the boundaries around limits are due to extrapolation errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feb7dff5",
+   "metadata": {},
+   "source": [
+    "### Conclusions\n",
+    "1. The probability of defaulting seems to increase with revol_util, open_acc, and int_rate\n",
+    "2. The probability of defaulting seems to decrease with annual_inc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 388,
-   "id": "04cdf524",
+   "id": "3b347eea",
    "metadata": {
     "scrolled": false
    },
@@ -4995,25 +5017,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0234790b",
+   "id": "805f3b5d",
    "metadata": {},
    "source": [
-    "\n",
-    "#### Note: \n",
-    "1. The orange lines in the above plots approxmately represent the PDF of P(Failure|factor)\n",
-    "2. We must only check the distribution between the blue and red lines to draw conclusions since they represent the min and max values. \n",
-    "3. The offshots on the boundaries around limits are due to extrapolation errors\n",
-    "\n",
     "### Conclusions\n",
-    "1. loan_amnt, funded_amnt, funded_amnt_inv,installement, dti, open_acc seem to have very similar distributions irrespective of loan_status, thus seeming to have no significant impact on probability of defaulting.\n",
-    "2. int_rate and revol_util distributions seem to be different for each loan_status, so we shall further look into that\n",
-    "1. The probability of defaulting seems to increase with increasing interest rates and revolving line utilization rate\n",
-    "2. Though this increase seems very little in Util Rate, the impact of interest rate seems very strong. Interest rates must be optimized to maximise revenue"
+    "1. loan_amt shows up to have some impact on the default prbability: cases of fully paid are distribute around amounts greater than those in case of defaulting.\n",
+    "2. The probability of defaulting seems to increase with revol_util, and int_rate\n",
+    "3. The probability of defaulting seems to increase with open_acc, but this is only on the higher percentile side.\n",
+    "4. The probability of defaulting seems to decrease with annual_inc"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "082fb5f6",
+   "id": "422a2bdf",
    "metadata": {},
    "source": [
     "# BIVARIATE DATA ANALYSIS\n",
@@ -5032,7 +5048,7 @@
   {
    "cell_type": "code",
    "execution_count": 386,
-   "id": "207e6f04",
+   "id": "63504955",
    "metadata": {},
    "outputs": [
     {
@@ -5065,14 +5081,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "929d60a5",
+   "id": "c8602a85",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5e5b60e0",
+   "id": "d70768c5",
    "metadata": {},
    "source": [
     "# TIME SERIES ANALYSIS"
@@ -5081,7 +5097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e44dae",
+   "id": "e03ff295",
    "metadata": {},
    "outputs": [],
    "source": []
